// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pagination > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 0.5rem;
}

.emotion-2 {
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="true"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            1
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            2
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            3
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            4
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            5
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly component with disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 0.5rem;
}

.emotion-2 {
  width: 2.5rem;
}

.emotion-4 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2.5rem;
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            disabled=""
            type="button"
          >
            1
          </button>
          <span
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_true__m4c9ow1a style_undefined_compound_60__m4c9ow30"
            style="--qabug40: center;"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            disabled=""
            type="button"
          >
            4
          </button>
          <button
            aria-current="true"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            disabled=""
            type="button"
          >
            5
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            disabled=""
            type="button"
          >
            6
          </button>
          <span
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_true__m4c9ow1a style_undefined_compound_60__m4c9ow30"
            style="--qabug40: center;"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            disabled=""
            type="button"
          >
            10
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly component with pageTabCount 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 0.5rem;
}

.emotion-2 {
  width: 2.5rem;
}

.emotion-4 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2.5rem;
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <span
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            style="--qabug40: center;"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            11
          </button>
          <button
            aria-current="true"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            12
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            13
          </button>
          <span
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            style="--qabug40: center;"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            16
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with page < 1 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 0.5rem;
}

.emotion-2 {
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            2
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with page > pageCount 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 0.5rem;
}

.emotion-2 {
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            2
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with pageClick 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 0.5rem;
}

.emotion-2 {
  width: 2.5rem;
}

.emotion-12 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2.5rem;
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="true"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            2
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            3
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            4
          </button>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            5
          </button>
          <span
            class="emotion-12 emotion-13 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            style="--qabug40: center;"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            10
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with pageCount is 1 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 0.5rem;
}

.emotion-2 {
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="true"
            class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            1
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with perPage - default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: none;
}

.emotion-3 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-3[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-3[data-size='medium'] {
  height: 2.5rem;
}

.emotion-3[data-size='large'] {
  height: 3rem;
}

.emotion-3[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-3[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-3[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-3[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-3[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-3[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-3[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-3[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-3[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-3[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-3[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-3:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-5 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  margin: 0 0.5rem;
}

.emotion-11 {
  width: 2rem;
}

.emotion-21 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2rem;
  width: 2rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <span
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
        >
          Items per page
        </span>
        <div
          aria-label="select-items-per-page"
          class="emotion-0 emotion-1 emotion-2"
        >
          <div
            aria-controls="«r1f»"
            aria-describedby="«r1f»"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-controls="«r1f»"
                aria-expanded="false"
                class="emotion-3 emotion-4"
                data-disabled="false"
                data-dropdownvisible="false"
                data-readonly="false"
                data-size="small"
                data-state="neutral"
                data-testid="select-input-select-items-per-page"
                id="«r1e»"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="emotion-5 emotion-6 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                >
                  10
                </span>
                <div
                  class="emotion-7 emotion-8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
        >
          11-20 of 100 items"
        </span>
      </div>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-9 emotion-10 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="true"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            2
          </button>
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            3
          </button>
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            4
          </button>
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            5
          </button>
          <span
            class="emotion-21 emotion-22 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            style="--qabug40: center;"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            10
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with perPage 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: none;
}

.emotion-3 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-3[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-3[data-size='medium'] {
  height: 2.5rem;
}

.emotion-3[data-size='large'] {
  height: 3rem;
}

.emotion-3[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-3[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-3[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-3[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-3[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-3[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-3[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-3[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-3[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-3[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-3[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-3:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-5 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  margin: 0 0.5rem;
}

.emotion-11 {
  width: 2rem;
}

.emotion-21 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2rem;
  width: 2rem;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <span
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
        >
          test
        </span>
        <div
          aria-label="select-items-per-page"
          class="emotion-0 emotion-1 emotion-2"
        >
          <div
            aria-controls="«r1v»"
            aria-describedby="«r1v»"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-controls="«r1v»"
                aria-expanded="false"
                class="emotion-3 emotion-4"
                data-disabled="false"
                data-dropdownvisible="false"
                data-readonly="false"
                data-size="small"
                data-state="neutral"
                data-testid="select-input-select-items-per-page"
                id="«r1u»"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="emotion-5 emotion-6 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                >
                  10
                </span>
                <div
                  class="emotion-7 emotion-8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
        >
          11-20 items
        </span>
      </div>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Back"
            class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-9 emotion-10 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="true"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            2
          </button>
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            3
          </button>
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            4
          </button>
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            5
          </button>
          <span
            class="emotion-21 emotion-22 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            style="--qabug40: center;"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-11 emotion-12 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            10
          </button>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <button
            aria-label="Next"
            class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
